--- a/roles/prepare_server/tasks/add-deploy-user.yml
+++ b/roles/prepare_server/tasks/add-deploy-user.yml
@@ -1,3 +1,8 @@
+- name: Create  group for user "deploy"
+  ansible.builtin.group:
+    name: deploy
+    state: present
+
 - name: Add user "deploy"
   ansible.builtin.user:
     name: deploy
@@ -6,6 +11,7 @@
     home: /home/deploy
     shell: /bin/bash
     create_home: yes
+    group: deploy
 
 - name: Create .ssh directory
   ansible.builtin.file:
