--- a/roles/prepare_server/tasks/configure-nginx.yml
+++ b/roles/prepare_server/tasks/configure-nginx.yml
@@ -63,6 +63,52 @@
     group: deploy
     mode: '0644'
 
+- name: Configure Nginx log rotation
+  copy:
+    content: |
+      /var/log/nginx/*.log {
+          daily
+          missingok
+          rotate 30
+          compress
+          delaycompress
+          notifempty
+          create 0640 www-data adm
+          sharedscripts
+          postrotate
+              if [ -f /var/run/nginx.pid ]; then
+                  kill -USR1 `cat /var/run/nginx.pid`
+              fi
+          endscript
+      }
+    dest: /etc/logrotate.d/nginx
+    owner: deploy
+    group: deploy
+    mode: '0644'
+
+- name: Create Nginx log directory structure
+  file:
+    path: /var/log/nginx
+    state: directory
+    owner: deploy
+    group: deploy
+    mode: '0755'
+
+- name: Set proper permissions on existing Nginx logs
+  file:
+    path: /var/log/nginx
+    owner: deploy
+    group: deploy
+    mode: '0755'
+    recurse: yes
+
+- name: Validate Nginx configuration
+  command: nginx -t
+  register: nginx_validation
+  changed_when: false
+  failed_when: nginx_validation.rc != 0
+  notify: restart nginx
+
 - name: Validate Nginx configuration
   command: nginx -t
   register: nginx_validation
