--- a/roles/prepare_server/tasks/install-composer.yml
+++ b/roles/prepare_server/tasks/install-composer.yml
@@ -17,7 +17,7 @@
   args:
     creates: /usr/local/bin/composer
 
-- name: Verify Composer installation with timeout
+- name: Verify Composer installation 
   command: composer --version
   register: composer_check
   changed_when: false
