--- a/roles/prepare_server/tasks/change-server-properties.yml
+++ b/roles/prepare_server/tasks/change-server-properties.yml
@@ -1,6 +1,6 @@
 - name: Set timezone to UTC
   community.general.timezone:
-    name: UTC
+    name: Etc/UTC
 
 - name: Include packages variables
   include_vars:
